Added Blazor List Pages with Delete function

--- a/CarRentalManagement/Client/Pages/Index.razor
+++ b/CarRentalManagement/Client/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Hello!, world!</h1>
 
-Welcome to your Syed Syakir's app.
+Welcome to Syed Syakir's new app!
 
 <SurveyPrompt Title="How is Blazor working for you?" />
