--- a/CarRentalManagement/Client/Shared/NavMenu.razor
+++ b/CarRentalManagement/Client/Shared/NavMenu.razor
@@ -4,7 +4,6 @@
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
-
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
         <LoginDisplay />
@@ -45,13 +44,23 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="makes">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Makes
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="samplepage">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Sample page
+            <NavLink class="nav-link" href="models">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Models
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="colours">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Colours
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="customers">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
             </NavLink>
         </li>
     </ul>
