Added Blazor List Pages with Delete function

--- a/CarRentalManagement/Client/Pages/Bookings/Index.razor
+++ b/CarRentalManagement/Client/Pages/Bookings/Index.razor
@@ -1,62 +1,61 @@
-﻿@page "/makes/"
+﻿@page "/bookings/"
 @inject HttpClient _client
 @inject IJSRuntime js
 @attribute [Authorize]
 
-<h3 class="card-title">Car Makes</h3>
 
-@if (Makes == null)
+<h3 class="card-title">Car Bookings</h3>
+
+@if (Bookings == null)
 {
-    <div class="alert alert-info">Loading Makes...</div>
+    <div class="alert alert-info">Loading booking...</div>
 }
 else
 {
-    <table class="table-responsive">
+    <table class="table table-responsive">
         <thead>
             <tr>
-                <th>Name</th>
+                <th>Booking Id</th>
+                <th>Customer License</th>
+                <th>Date</th>
+                <th>Duration in days</th>
+                <th>Plate Number</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var make in Makes)
-                {
-                    <tr>
-                        <td>@make.Name</td>
-                        <td>
-                            <a href="/makes/view/@make.Id" class="btn btn-primary">
-                                <span class="oi oi-book"></span>
-                            </a>
-                            <a href="/makes/edit/@make.Id" class="btn btn-warning">
-                                <span class="oi oi-pencil"></span>
-                            </a>
-                            <button class="btn btn-danger" @onclick="@(()=>Delete(make.Id))">
-                                <span class="oi oi-book"></span>
-                            </button>
-                        </td>
-                    </tr>
-                }
+            @foreach (var booking in Bookings)
+            {
+            <tr>
+                <td>@booking.Id</td>
+                <td>@booking.Customer.DrivingLicense</td>
+                <td>@booking.DateCreated.Date.ToString("dd MMMM yyyy")</td>
+                <td>@((booking.DateIn - booking.DateOut).TotalDays.ToString())</td>
+                <td>@booking.Vehicle.LicensePlateNumber</td>
+            </tr>
+            }
         </tbody>
     </table>
 }
 
-
 @code {
-    private List<Make> Makes;
+    private List<Booking> Bookings;
 
     protected async override Task OnInitializedAsync()
     {
-        Makes = await _client.GetFromJsonAsync<List<Make>>("api/makes");
+        Bookings = await _client.GetFromJsonAsync<List<Booking>>($"{Endpoints.BookingsEndpoint}");
     }
 
-    async Task Delete (int makeId)
+    async Task Delete(int bookingId)
     {
-        var make = Makes.First(q => q.Id == makeId);
-        var confirm = await js.InvokeAsync<bool>("confirm", $"Do you want to delete {make.Name}?");
-            if (confirm)
-            {
-                await _client.DeleteAsync($"api/makes/{makeId}");
-                await OnInitializedAsync();
-            }
+        var booking = Bookings.First(q => q.Id == bookingId);
+        var confirm = await js.InvokeAsync<bool>("confirm", $"Do you want to delete {booking.Id}?");
+        if (confirm)
+
+        {
+            await _client.DeleteAsync($"{Endpoints.BookingsEndpoint}/{bookingId}");
+            await OnInitializedAsync();
+        }
     }
+
 }
