--- a/CarRentalManagement/Client/Shared/NavMenu.razor
+++ b/CarRentalManagement/Client/Shared/NavMenu.razor
@@ -63,6 +63,21 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="vehicles">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Vehicles
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="bookings">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Bookings
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="samplepage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Sample Page
+            </NavLink>
+        </li>
     </ul>
 </div>
 
